# codex_demo

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: decisions.md
engine/: CMakeLists.txt
engine/include/reng/: app.h  backend.h  command_buffer.h  command_buffer_pool.h  command_queue.h  device.h  engine.h  logger.h  platform.h  queue_timeline.h  queue_types.h  render_graph.h  reng.h  resources.h  swapchain.h
engine/src/backends/metal/: metal_backend.mm  metal_command.h  metal_command_buffer.h  metal_command_buffer.mm  metal_command_buffer_pool.h  metal_command_buffer_pool.mm  metal_command_queue.h  metal_command_queue.mm  metal_device.h  metal_device.mm  metal_queue_timeline.h  metal_queue_timeline.mm  metal_resources.h  metal_resources.mm  metal_swapchain.h  metal_swapchain.mm  metal_utils.h  metal_utils.mm
engine/src/backends/vulkan/: vulkan_backend.cpp  vulkan_command.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_command_buffer_pool.cpp  vulkan_command_buffer_pool.h  vulkan_command_queue.cpp  vulkan_command_queue.h  vulkan_device.cpp  vulkan_device.h  vulkan_device_macos.mm  vulkan_queue_timeline.cpp  vulkan_queue_timeline.h  vulkan_resources.cpp  vulkan_resources.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_utils.cpp  vulkan_utils.h
engine/src/backends/webgpu/: webgpu_backend.cpp
engine/src/core/: command_buffer.cpp  device.cpp  engine.cpp  logger.cpp  render_graph.cpp  resource_pool.cpp  resource_pool.h  resources.cpp
engine/src/platform/: app.cpp  backend_factory.h  backend_factory_macos.mm  backend_factory_windows.cpp  macos_app.mm  windows_app.cpp
engine/tests/: CMakeLists.txt  render_graph_tests.cpp  swapchain_smoke_tests.cpp  test_runner.cpp
samples/blank/: CMakeLists.txt  macos_main.mm  main.cpp  windows_main.cpp
samples/triangle/: CMakeLists.txt  main.cpp
scripts/: build_dawn_web.py  build_dawn_web.sh  build_local.py  fetch_dawn.sh  test_local.py  test_web_local.py
web/: CMakeLists.txt  README.md  app.js  index.html  smoke_test.js
